update-manager (1:0.87.17) hardy; urgency=low

  * DistUpgrade/DistUpgradeController.py:
    - when run from a CDROM upgrade on dapper, ensure to
      fetch the right files on tryUpdateSelf() (#215673)
    - ensure that language-support-$lang packages get
      upgraded if they are installed
  * UpdateManager/Core/MetaRelease.py:
    - support forceLTS option (#215673)

 --

update-manager (1:0.87.16) hardy; urgency=low

  * DistUpgrade/DistUpgradeViewText.py:
    - show prompt again after showing details 
    - use pager for long change entries
    (thanks to James Troup)
    - fix text wrap to not break lines on "-" (e.g. in package 
      names)
  * DistUpgradeController.py:
    - do not leave 20archive.save files around
    - make the code that asks about starting a new ssh daemon
      (if run under ssh) more robust
    - set status to "Calculating changes" again after displaying
      demoted packages
    - improve logging if prerequisites download fails
  * DistUpgrade/DistUpgradeCache.py:
    - improve the evms detection/removal (thanks to Lamont Jones)
  * DistUpgrade/DistUpgrade.cfg.dapper:
    - add "lvm2" to the KeepInstalledPkgs (LP: #211488)
    - sync RemoveObsoletes, ForcedObsoletes, KeepInstalledSections
      with DistUpgrade.cfg
    - text wrap questions too
  * po/*.po:
    - updated translations (LP: #210699)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 04 Apr 2008 18:54:13 +0200

update-manager (1:0.87.15) hardy; urgency=low

  * DistUpgrade/DistUpgradeCache.py:
    - fix fd leak 
  * DistUpgrade/DistUpgradeController.py:
    - abort when debsig-verify is installed, it makes any
      upgrade fail (LP: #208957)
    - run migrate-fstab-to-uuid.sh as PostInstallScript (LP: #209347)
    - set RELEASE_UPGRADE_MODE={server,desktop} environment
  * DistUpgrade/DistUpgradeViewKDE.py:
    - fix crash/race in terminal key press handler (LP: #205445)
    - fix encoding issue (LP: #208390)
    - call it 8.04 LTS (LP: #204659)