@@ -7,6 +7,9 @@ update-manager (1:0.87.17) hardy; urgency=low
       upgraded if they are installed
   * UpdateManager/Core/MetaRelease.py:
     - support forceLTS option (#215673)
+  * DistUpgrade/DistUpgradeView.py:
+    - work around gutsy->hardy nvidia-glx uprade problem
+      when libqt-perl is used (#205079)
 
  --
 
